compile-tests/fixtures/compile-errors/register-invalid-parameter/input.ts
import { registerType } from "../../../../dist/typecheck.macro";
registerType(42);
